# gtk4_shadertoy

./: README.md  meson.build
data/resources/: github.aeldemery.gtk4_shadertoy.gresource.xml  happyjumping.glsl  meson.build
src/: Main.vala  MainWindow.vala  ShaderToy.vala  meson.build
src/vapi/: epoxy.vapi  gl.vapi
